add: cn/en/ru translating dictionaries

--- a/composeApp/src/localisation/en-US.json
+++ b/composeApp/src/localisation/en-US.json
@@ -1,2 +1,24 @@
-
-cn-CN.json
+{
+  "transList": [
+    {
+      "code": "settings",
+      "localisation": "Settings"
+    },
+    {
+      "code": "back",
+      "localisation": "Back"
+    },
+    {
+      "code": "enter_graph_name",
+      "localisation": "Enter graph name"
+    },
+    {
+      "code": "home",
+      "localisation": "Home"
+    },
+    {
+      "code": "add",
+      "localisation": "Add"
+    }
+  ]
+}
