--- a/composeApp/src/localisation/ru-RU.json
+++ b/composeApp/src/localisation/ru-RU.json
@@ -1,2 +1,24 @@
-
-cn-CN.json
+{
+  "transList": [
+    {
+      "code": "settings",
+      "localisation": "Настройки"
+    },
+    {
+      "code": "back",
+      "localisation": "Назад"
+    },
+    {
+      "code": "enter_graph_name",
+      "localisation": "Введите название графа"
+    },
+    {
+      "code": "home",
+      "localisation": "На главную"
+    },
+    {
+      "code": "add",
+      "localisation": "Добавить"
+    }
+  ]
+}
