upd: Ru/En localisation dictionary update

--- a/composeApp/src/commonMain/resources/localisation/cn-CN.json
+++ b/composeApp/src/commonMain/resources/localisation/cn-CN.json
@@ -27,6 +27,18 @@
     {
       "code": "add_edge",
       "localisation": "TODO"
+    },
+    {
+      "code": "add",
+      "localisation": "TODO"
+    },
+    {
+      "code": "write_name",
+      "localisation": "TODO"
+    },
+    {
+      "code": "enter_new_graph_name",
+      "localisation": "TODO"
     }
   ]
 }
