--- a/composeApp/src/commonMain/resources/localisation/en-US.json
+++ b/composeApp/src/commonMain/resources/localisation/en-US.json
@@ -27,6 +27,18 @@
     {
       "code": "add_edge",
       "localisation": "Add"
+    },
+    {
+      "code": "add",
+      "localisation": "Add"
+    },
+    {
+      "code": "write_name",
+      "localisation": "Write name"
+    },
+    {
+      "code": "enter_new_graph_name",
+      "localisation": "Create new graph"
     }
   ]
 }
