Feat: restructured io, integrated neo4j 1. Add saving neo4j input data to settings 2. Moved sqlite functions to special class

--- a/src/main/resources/localisation/en-US.json
+++ b/src/main/resources/localisation/en-US.json
@@ -21,8 +21,20 @@
       "localisation": "Add vertex"
     },
     {
+      "code": "saving",
+      "localisation": "Saving"
+    },
+    {
+      "code": "language",
+      "localisation": "Language"
+    },
+    {
+      "code": "neo4j_data",
+      "localisation": "Neo4j data"
+    },
+    {
       "code": "open_edge",
-      "localisation":"Add edge"
+      "localisation": "Add edge"
     },
     {
       "code": "add_edge",
