--- a/src/main/resources/localisation/en-US.json
+++ b/src/main/resources/localisation/en-US.json
@@ -33,12 +33,8 @@
       "localisation": "Neo4j data"
     },
     {
-      "code": "open_edge",
-      "localisation": "Add edge"
-    },
-    {
       "code": "add_edge",
-      "localisation": "Add"
+      "localisation": "Add edge"
     },
     {
       "code": "add",
@@ -115,6 +111,10 @@
     {
       "code": "end",
       "localisation": "End"
+    },
+    {
+      "code": "weight",
+      "localisation": "weight"
     }
   ]
 }
