--- a/src/main/resources/localisation/ru-RU.json
+++ b/src/main/resources/localisation/ru-RU.json
@@ -37,10 +37,6 @@
       "localisation": "Добавить ребро"
     },
     {
-      "code": "open_edge",
-      "localisation": "Добавить"
-    },
-    {
       "code": "add",
       "localisation": "Добавить"
     },
@@ -115,6 +111,10 @@
     {
       "code": "end",
       "localisation": "Конец"
+    },
+    {
+      "code": "weight",
+      "localisation": "вес"
     }
   ]
 }
